✨ [FEAT] adicionando resources: campaign
Descrição detalhada:
- Adicionando os resources: campaign, com controller, router, schemas, services e types.
- Adicionando a rota de campanha no router principal.
- Adicionando a rota de campanha no swagger.
- Adicionando a documentação da rota de campanha no swagger.
-

Notas adicionais:
- close: #6
