# backend/src/__swagger__/swagger-output.json
@@ -453,6 +453,205 @@
           }
         }
       }
+    },
+    "/campaigns/": {
+      "get": {
+        "tags": [
+          "Campaigns"
+        ],
+        "summary": "Get all campaigns",
+        "description": "Fetch all campaigns from the database.",
+        "responses": {
+          "200": {
+            "description": "List of all campaigns in the database."
+          },
+          "500": {
+            "description": "Server error."
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Campaigns"
+        ],
+        "summary": "Create a campaign",
+        "description": "Add a new campaign to the database.",
+        "parameters": [
+          {
+            "name": "campaign",
+            "in": "body",
+            "description": "Campaign data.",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/CampaignCreate"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Campaign created."
+          },
+          "400": {
+            "description": "Invalid data."
+          },
+          "500": {
+            "description": "Server error."
+          }
+        }
+      }
+    },
+    "/campaigns/{id}": {
+      "get": {
+        "tags": [
+          "Campaigns"
+        ],
+        "summary": "Get a campaign by ID",
+        "description": "Fetch a campaign from the database by ID.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Campaign ID."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Campaign found."
+          },
+          "404": {
+            "description": "Campaign not found."
+          },
+          "500": {
+            "description": "Server error."
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Campaigns"
+        ],
+        "summary": "Update a campaign",
+        "description": "Modify a campaign in the database.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Campaign ID."
+          },
+          {
+            "name": "campaign",
+            "in": "body",
+            "description": "New campaign data.",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/CampaignUpdate"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Campaign updated."
+          },
+          "400": {
+            "description": "Invalid data."
+          },
+          "404": {
+            "description": "Campaign not found."
+          },
+          "500": {
+            "description": "Server error."
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Campaigns"
+        ],
+        "summary": "Delete a campaign",
+        "description": "Remove a campaign from the database.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Campaign ID."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Campaign deleted."
+          },
+          "404": {
+            "description": "Campaign not found."
+          },
+          "500": {
+            "description": "Server error."
+          }
+        }
+      }
+    },
+    "/campaigns/user/{userId}": {
+      "get": {
+        "tags": [
+          "Campaigns"
+        ],
+        "summary": "Get all campaigns by user ID",
+        "description": "Fetch all campaigns from the database by user ID.",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "User ID."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of campaigns found."
+          },
+          "404": {
+            "description": "Campaigns not found."
+          },
+          "500": {
+            "description": "Server error."
+          }
+        }
+      }
+    },
+    "/campaigns/system/{systemId}": {
+      "get": {
+        "tags": [
+          "Campaigns"
+        ],
+        "summary": "Get all campaigns by system ID",
+        "description": "Fetch all campaigns from the database by system ID.",
+        "parameters": [
+          {
+            "name": "systemId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "System ID."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of campaigns found."
+          },
+          "404": {
+            "description": "Campaigns not found."
+          },
+          "500": {
+            "description": "Server error."
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -509,11 +708,11 @@
       "properties": {
         "systemId": {
           "type": "string",
-          "example": "fe80ccc8-db47-45e9-becc-d32f2da4251e"
+          "example": "2a70fcff-0b10-466d-aae8-551929fb623d"
         },
         "statId": {
           "type": "string",
-          "example": "3b9239c2-c26f-4a96-bb17-ff257fa37865"
+          "example": "1b6a354d-bbce-4965-94c0-76646576260a"
         }
       }
     },
@@ -522,11 +721,53 @@
       "properties": {
         "systemId": {
           "type": "string",
-          "example": "36230071-5f75-4734-9afb-5574064cb857"
+          "example": "48e63e5f-9130-4f24-be0c-d630ada6626c"
         },
         "statId": {
           "type": "string",
-          "example": "752482f0-0aa5-4d12-af9d-d4c5beb04ee7"
+          "example": "cbe6e0a3-359c-4d40-a3c5-a174ff5b7e51"
+        }
+      }
+    },
+    "CampaignCreate": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Campaign 1"
+        },
+        "description": {
+          "type": "string",
+          "example": "Description 1"
+        },
+        "userId": {
+          "type": "string",
+          "example": "b06e2098-2ee4-41cf-b8ba-7ee0d23f23ea"
+        },
+        "systemId": {
+          "type": "string",
+          "example": "b424edcf-7c72-43fa-9fe1-a25534a1576f"
+        }
+      }
+    },
+    "CampaignUpdate": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Campaign 1.1"
+        },
+        "description": {
+          "type": "string",
+          "example": "Description 1.1"
+        },
+        "userId": {
+          "type": "string",
+          "example": "13adef7b-2e06-498c-8fa3-ccab344fc058"
+        },
+        "systemId": {
+          "type": "string",
+          "example": "37d0254f-b317-43d3-9c13-e3191ebc1fc2"
         }
       }
     }
