# backend/src/router/v1Router.ts
@@ -3,6 +3,7 @@ import { Router } from "express";
 import statRouter from "../resources/stat/stat.router";
 import systemRouter from "../resources/system/system.router";
 import systemStatRouter from "../resources/systemStat/systemStat.router";
+import capaignRouter from "../resources/campaign/campaign.router";
 
 const v1Router = Router();
 
@@ -19,6 +20,11 @@ v1Router.use(
 v1Router.use(
   "/systemStats", // #swagger.tags = ['System Stats']
   systemStatRouter
+);
+
+v1Router.use(
+  "/campaigns", // #swagger.tags = ['Campaigns']
+  capaignRouter
 );
 
 export default v1Router;
